# VBS_unitarity

./: Codice SM.nb  Codice SMEFT.nb  EFTsimulation.md  GoodToKnowEFT.md  README(1).txt  README.md  SM+-+-.nb  SM+--+.nb  workflow.md
combine/histos_root/: CMakeLists.txt  LS4all  LS_all_obs  LSplot  README.txt  all_E  all_Eta  all_Phi  all_deltaEtajj  all_deltaPhijj  all_mjj  all_mll  all_pt  all_px  all_py  all_pz  bin_count  bins_counting.sh  carini  cariniCV  ciplots  comparing_ci  create_histos.sh  distributions  distributions_SMvsEFT  expVSmod  script  significanza  significanza.txt  significanza2
combine/histos_root/42LUM/: Eta_el.root  Eta_j.root  Eta_mu.root  Eta_ta.root  PT_el.root  PT_j.root  PT_mu.root  PT_ta.root  mjj.root  mll.root
combine/histos_root/CIplots/: tabellaCIcHDD.txt  tabellaCIcHW.txt  tabellaCIcHWB.txt  tabellaCIcHWBtil.txt  tabellaCIcHWtil.txt  tabellaCIcHbox.txt  tabellaCIcW.txt  tabellaCIcWtil.txt
combine/histos_root/bins_counting/: Eta_el_bins.txt  Eta_j_bins.txt  Eta_mu_bins.txt  Eta_ta_bins.txt  PT_el_bins.txt  PT_j_bins.txt  PT_mu_bins.txt  PT_ta_bins.txt  mll_bins.txt
combine/histos_root/data/: cHDD_quad.root  cW_int_0.4.root
combine/histos_root/data/root_files_emuta/: cHDD_int.root  cHWB_int.root  cHWB_quad.root  cHWBtil_int.root  cHWtil_quad.root  cHbox_int.root  cW_int.root  cW_quad_0.4.root  cWtil_int.root
combine/histos_root/histos/E/: SM_2017_inclusive.root  cHWB_int_2017_inclusive.root  cHWB_quad_2017_inclusive.root  cHW_int_2017_inclusive.root  cHW_quad_2017_inclusive.root  cHbox_int_2017_inclusive.root  cHbox_quad_2017_inclusive.root  cW_int_2017_inclusive.root  cW_quad_2017_inclusive.root
combine/histos_root/histos/Eta/: SM.root  SM_cHDD_int.root  SM_cHDD_int_quad.root  SM_cHDD_quad.root  SM_cHWB_int.root  SM_cHWB_int_quad.root  SM_cHWB_quad.root  SM_cHWBtil_int.root  SM_cHWBtil_int_quad.root  SM_cHWBtil_quad.root  SM_cHW_int.root  SM_cHW_int_quad.root  SM_cHW_quad.root  SM_cHWtil_int.root  SM_cHWtil_int_quad.root  SM_cHWtil_quad.root  SM_cHbox_int.root  SM_cHbox_int_quad.root  SM_cHbox_quad.root  SM_cW_int.root  SM_cW_int_0.4.root  SM_cW_int_quad.root  SM_cW_int_quad_0.4.root  SM_cW_quad.root  SM_cW_quad_0.4.root  SM_cWtil_int.root  SM_cWtil_int_quad.root  SM_cWtil_quad.root  cHDD_int.root  cHDD_quad.root  cHWB_int.root  cHWB_quad.root  cHWBtil_int.root  cHWBtil_quad.root  cHW_int.root  cHW_quad.root  cHWtil_int.root  cHWtil_quad.root  cHbox_int.root  cHbox_quad.root  (+6 more)
combine/histos_root/histos/PT/: SM.root  SM_cHDD_int.root  SM_cHDD_int_quad.root  SM_cHDD_quad.root  SM_cHWB_int.root  SM_cHWB_int_quad.root  SM_cHWB_quad.root  SM_cHWBtil_int.root  SM_cHWBtil_int_quad.root  SM_cHWBtil_quad.root  SM_cHW_int.root  SM_cHW_int_quad.root  SM_cHW_quad.root  SM_cHWtil_int.root  SM_cHWtil_int_quad.root  SM_cHWtil_quad.root  SM_cHbox_int.root  SM_cHbox_int_quad.root  SM_cHbox_quad.root  SM_cW_int.root  SM_cW_int_0.4.root  SM_cW_int_quad.root  SM_cW_int_quad_0.4.root  SM_cW_quad.root  SM_cW_quad_0.4.root  SM_cWtil_int.root  SM_cWtil_int_quad.root  SM_cWtil_quad.root  cHDD_int.root  cHDD_quad.root  cHWB_int.root  cHWB_quad.root  cHWBtil_int.root  cHWBtil_quad.root  cHW_int.root  cHW_quad.root  cHWtil_int.root  cHWtil_quad.root  cHbox_int.root  cHbox_quad.root  (+6 more)
combine/histos_root/histos/Phi/: SM.root  cHW_int_2017_inclusive.root  cHbox_quad_2017_inclusive.root  cW_int_2017_inclusive.root  cW_quad_2017_inclusive.root
combine/histos_root/histos/Px/: SM_2017_inclusive.root  cHWB_int_2017_inclusive.root  cHWB_quad_2017_inclusive.root  cHbox_int_2017_inclusive.root  cHbox_quad_2017_inclusive.root  cW_int_2017_inclusive.root
combine/histos_root/histos/Py/: cHWB_int_2017_inclusive.root  cHW_int_2017_inclusive.root  cW_int_2017_inclusive.root
combine/histos_root/histos/Pz/: cHWB_quad_2017_inclusive.root  cHW_int_2017_inclusive.root  cHW_quad_2017_inclusive.root  cW_quad_2017_inclusive.root
combine/histos_root/histos/deltaEtajj/: SM.root  SM_cW_int.root  SM_cW_int_quad.root  SM_cW_quad.root  cW_int.root  cW_quad.root
combine/histos_root/histos/deltaPhijj/: SM.root  SM_cW_int.root  SM_cW_int_quad.root  SM_cW_quad.root  cW_int.root  cW_quad.root
combine/histos_root/histos/mjj/: SM.root  SM_cHDD_int.root  SM_cHDD_int_quad.root  SM_cHDD_quad.root  SM_cHWB_int.root  SM_cHWB_int_quad.root  SM_cHWB_quad.root  SM_cHWBtil_int.root  SM_cHWBtil_int_quad.root  SM_cHWBtil_quad.root  SM_cHW_int.root  SM_cHW_int_quad.root  SM_cHW_quad.root  SM_cHWtil_int.root  SM_cHWtil_int_quad.root  SM_cHWtil_quad.root  SM_cHbox_int.root  SM_cHbox_int_quad.root  SM_cHbox_quad.root  SM_cW_int.root  SM_cW_int_0.4.root  SM_cW_int_quad.root  SM_cW_int_quad_0.4.root  SM_cW_quad.root  SM_cW_quad_0.4.root  SM_cWtil_int.root  SM_cWtil_int_quad.root  SM_cWtil_quad.root  cHDD_int.root  cHDD_quad.root  cHWB_int.root  cHWB_quad.root  cHWBtil_int.root  cHWBtil_quad.root  cHW_int.root  cHW_quad.root  cHWtil_int.root  cHWtil_quad.root  cHbox_int.root  cHbox_quad.root  (+6 more)
combine/histos_root/histos/mll/: SM.root  SM_cHDD_int.root  SM_cHDD_int_quad.root  SM_cHDD_quad.root  SM_cHWB_int.root  SM_cHWB_int_quad.root  SM_cHWB_quad.root  SM_cHWBtil_int.root  SM_cHWBtil_int_quad.root  SM_cHWBtil_quad.root  SM_cHW_int.root  SM_cHW_int_quad.root  SM_cHW_quad.root  SM_cHWtil_int.root  SM_cHWtil_int_quad.root  SM_cHWtil_quad.root  SM_cHbox_int.root  SM_cHbox_int_quad.root  SM_cHbox_quad.root  SM_cW_int.root  SM_cW_int_0.4.root  SM_cW_int_quad.root  SM_cW_int_quad_0.4.root  SM_cW_quad.root  SM_cWtil_int.root  (+21 more)
combine/histos_root/histos4datacards/: Eta_el.root  Eta_j.root  Eta_j1.root  Eta_j1_(null).root  Eta_j2.root  Eta_mu.root  Eta_ta.root  PT_el.root  PT_j.root  PT_j1.root  PT_j2.root  PT_mu.root  PT_ta.root  deltaEtajj.root  deltaPhijj.root  deltaPhijj.root.root  merge  merge_multipart  mjj.root  mll.root
combine/histos_root/src/: LS4all.cpp  LSplot.cpp  all_Eta.cpp  all_deltaEtajj.cpp  all_deltaPhijj.cpp  all_mjj.cpp  all_mll.cpp  all_pt.cpp  bin_count.cpp  carini.cpp  cariniCV.cpp  ciplots.cpp  comparing_ci.cpp  distributions_SMvsEFT.cpp  merge.cpp  merge_multipart.cpp  significanza.cpp
(+12066 files in other folders)
